# neuralnet_cpp

./: .gitignore  CMakeLists.txt  README.md  autograd.cpp  neuralnet.cpp  neuralnet.h  neuralnet_test.cpp  ops.cpp  tensor.cpp  train.cpp  train.py
include/: autograd.h  ops.h  tensor.h
test/: autograd_test.cpp  ops_test.cpp  tensor_test.cpp
